versions/3.4.0/docs/ElementsUserReference.md
# ElementsUserReference

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | [optional] 
**allow_changing_password** | **bool** |  | [optional] [readonly] 
**allow_wan_login** | **bool** |  | [optional] [readonly] 
**allowed_fs_paths** | **list[str]** |  | [optional] [readonly] 
**allowed_fs_write_paths** | **list[str]** |  | [optional] [readonly] 
**avatar** | **str** |  | [optional] [readonly] 
**client_sessions** | [**list[ClientSession]**](ClientSession.md) |  | [optional] [readonly] 
**default_page** | **str** |  | [optional] [readonly] 
**display_name** | **str** |  | [optional] [readonly] 
**effective_permissions** | **list[str]** |  | [optional] [readonly] 
**email** | **str** |  | [optional] [readonly] 
**expiry** | **datetime** |  | [optional] [readonly] 
**ancillary_path_read_only** | **bool** |  | [optional] [readonly] 
**ancillary_path** | **str** |  | [optional] [readonly] 
**fm_bookmarks** | **list[str]** |  | [optional] [readonly] 
**full_name** | **str** |  | [optional] [readonly] 
**gid** | **int** |  | [optional] [readonly] 
**group_permissions** | **list[str]** |  | [optional] [readonly] 
**has_password** | **bool** |  | [optional] [readonly] 
**home** | **int** |  | [optional] [readonly] 
**is_external** | **bool** |  | [optional] [readonly] 
**is_cloud** | **bool** |  | [optional] [readonly] 
**is_cloud_default** | **bool** |  | [optional] [readonly] 
**is_enabled** | **bool** |  | [optional] [readonly] 
**language** | **str** |  | [optional] [readonly] 
**last_seen** | **datetime** |  | [optional] [readonly] 
**ldap** | **int** |  | [optional] [readonly] 
**ldap_dn** | **str** |  | [optional] [readonly] 
**password_change_required** | **bool** |  | [optional] [readonly] 
**permissions** | **list[str]** |  | [optional] [readonly] 
**shaper_ceiling** | **int** |  | [optional] [readonly] 
**shaper_rate** | **int** |  | [optional] [readonly] 
**sync_id** | **str** |  | [optional] [readonly] 
**totp_enabled** | **bool** |  | [optional] [readonly] 
**uid** | **int** |  | [optional] [readonly] 
**unix_username** | **str** |  | [optional] [readonly] 
**username** | **str** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


