versions/3.5.2/docs/ElementsUserReference.md
# ElementsUserReference


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **int** |  | 
**ancillary_path** | **str, none_type** |  | [optional] [readonly] 
**ancillary_path_read_only** | **str, none_type** |  | [optional] [readonly] 
**allow_changing_password** | **bool** |  | [optional] [readonly] 
**allow_wan_login** | **bool** |  | [optional] [readonly] 
**allowed_fs_paths** | **[str, none_type], none_type** |  | [optional] [readonly] 
**allowed_fs_write_paths** | **[str, none_type], none_type** |  | [optional] [readonly] 
**avatar** | **str, none_type** |  | [optional] [readonly] 
**default_page** | **str** |  | [optional] [readonly] 
**display_name** | **str** |  | [optional] [readonly] 
**effective_permissions** | **[str, none_type]** |  | [optional] [readonly] 
**email** | **str, none_type** |  | [optional] [readonly] 
**expiry** | **datetime, none_type** |  | [optional] [readonly] 
**fm_bookmarks** | **[str, none_type]** |  | [optional] [readonly] 
**full_name** | **str, none_type** |  | [optional] [readonly] 
**gid** | **int, none_type** |  | [optional] [readonly] 
**group_permissions** | **[str, none_type]** |  | [optional] [readonly] 
**has_password** | **bool** |  | [optional] [readonly] 
**home** | **int, none_type** |  | [optional] [readonly] 
**is_external** | **bool** |  | [optional] [readonly] 
**is_cloud** | **bool** |  | [optional] [readonly] 
**is_cloud_default** | **bool** |  | [optional] [readonly] 
**is_enabled** | **bool** |  | [optional] [readonly] 
**language** | **str, none_type** |  | [optional] [readonly] 
**last_seen** | **datetime, none_type** |  | [optional] [readonly] 
**ldap** | **int, none_type** |  | [optional] [readonly] 
**ldap_dn** | **str, none_type** |  | [optional] [readonly] 
**password_change_required** | **bool** |  | [optional] [readonly] 
**permissions** | **[str, none_type]** |  | [optional] [readonly] 
**shaper_ceiling** | **int, none_type** |  | [optional] [readonly] 
**shaper_rate** | **int, none_type** |  | [optional] [readonly] 
**sync_id** | **str** |  | [optional] [readonly] 
**totp_enabled** | **bool** |  | [optional] [readonly] 
**uid** | **int, none_type** |  | [optional] [readonly] 
**unix_username** | **str, none_type** |  | [optional] [readonly] 
**username** | **str** |  | [optional] [readonly] 

[[Back to Model list]](../#documentation-for-models) [[Back to API list]](../#documentation-for-api-endpoints) [[Back to README]](../)


